--- a/app/css/card-grid.css
+++ b/app/css/card-grid.css
@@ -46,6 +46,10 @@
   min-width: 375px;
   max-width: 375px;
   overflow: hidden;
+  border: 3px solid transparent;
+}
+.mdc-card:focus-within {
+  border-color: var(--mdc-theme-secondary);
 }
 .mdc-card .mdc-card__primary-action {
   padding: 0 16px 8px 16px;
