--- a/app/css/home.css
+++ b/app/css/home.css
@@ -1,29 +1,102 @@
-.cards {
-  background: grey;
+.main-content {
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
+  padding: 0 20px;
+}
+.main-content .intro {
+  color: var(--color);
+}
+.main-content .intro h1:nth-of-type(2) {
+  color: var(--color2);
+}
+.main-content .cards {
   display: grid;
-  grid-gap: 20px;
-  margin: 0 20px 20px 20px;
-  grid-auto-rows: 200px;
   height: fit-content;
-  grid-template-columns: repeat(auto-fill, 300px);
-  background: var(--mdc-theme-background);
 }
-.cards .mdc-card {
-  margin-top: 20px;
+.main-content .cards .mdc-card {
   background: var(--el2);
-  height: fit-content;
 }
-.cards .mdc-card__primary-action {
+.main-content .cards .mdc-card__primary-action {
   padding: 0 0 8px 16px;
   color: var(--color);
 }
-.cards .demo-card__title {
+.main-content .cards .card__title {
   margin-top: 12px;
   margin-bottom: 0px;
 }
-.cards .demo-card__subtitle {
+.main-content .cards .card__subtitle {
   margin-top: 0px;
 }
-.cards .mdc-card {
+.main-content .cards .mdc-card__actions {
+  margin-top: auto;
+}
+.main-content .cards {
+  grid-gap: 20px;
+  grid-auto-rows: 200px;
+  grid-template-columns: repeat(auto-fill, 300px);
+}
+.main-content .cards .mdc-card {
+  margin-top: 20px;
+  background: var(--el2);
+  height: fit-content;
   max-width: 600px;
+}
+.main-content .cards .mdc-card__primary-action {
+  padding: 0 0 8px 16px;
+  color: var(--color);
+}
+.main-content .cards .demo-card__title {
+  margin-top: 12px;
+  margin-bottom: 0px;
+}
+.main-content .cards .demo-card__subtitle {
+  margin-top: 0px;
+}
+.main-content .stats {
+  width: 100%;
+  height: fit-content;
+}
+.main-content .stats .cards {
+  width: 100%;
+  height: fit-content;
+  padding-bottom: 20px;
+  grid-gap: 20px;
+  grid-auto-rows: 400px;
+  grid-template-columns: repeat(auto-fill, 300px);
+}
+.main-content .stats .cards .mdc-card {
+  width: 300px;
+  height: 350px;
+}
+.main-content .stats .cards .mdc-card .mdc-card__primary-action {
+  height: 100%;
+  padding: 0;
+}
+.main-content .stats .cards .mdc-card .mdc-card__primary-action .card__primary {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+}
+.main-content .stats .cards .mdc-card .mdc-card__primary-action .card__primary .stat {
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.main-content .stats .cards .mdc-card .mdc-card__primary-action .card__primary .stat h2 {
+  font-size: 4em;
+  color: var(--mdc-theme-secondary);
+  padding: 0;
+  margin: 0;
+}
+.main-content .stats .cards .mdc-card .mdc-card__primary-action .card__primary .title {
+  text-align: center;
+}
+.main-content .stats .cards .mdc-card .mdc-card__primary-action .card__primary .title h2 {
+  font-size: 2.2em;
+  margin-bottom: 0.5em;
 }
