--- a/app/css/library.css
+++ b/app/css/library.css
@@ -19,7 +19,7 @@
   height: 100%;
   width: 100%;
   display: flex;
-  overflow-x: auto;
+  overflow-x: scroll;
 }
 .library .genres .genre-container .genre-cards .mdc-card:first-of-type {
   margin-left: 5vw;
@@ -28,20 +28,14 @@
   content: "";
   border-right: 20px solid transparent;
 }
-.library .genres .genre-container .genre-cards:hover {
-  margin-bottom: -12px;
-}
-.library .genres .genre-container .genre-cards:hover::-webkit-scrollbar {
-  display: initial;
-}
-.library .genres .genre-container .genre-cards::-webkit-scrollbar {
-  display: none;
-  height: 12px;
+.library .genres .genre-container .genre-cards:hover::-webkit-scrollbar-thumb {
+  background-color: var(--mdc-theme-secondary);
 }
 .library .genres .genre-container .genre-cards::-webkit-scrollbar-track {
   background-color: var(--mdc-theme-background);
 }
 .library .genres .genre-container .genre-cards::-webkit-scrollbar-thumb {
+  background-color: var(--mdc-theme-background);
   border-left: 5vw solid var(--mdc-theme-background);
   border-right: 40px solid var(--mdc-theme-background);
   border-radius: 0;
