--- a/app/css/root.css
+++ b/app/css/root.css
@@ -13271,6 +13271,7 @@ a.mdc-list-item {
   --drawer-bg: #eeeeee;
   --btn-color: #cccccc;
   --color: #404040;
+  --color2: #cccccc
   --light-color: #ffffff;
   --dark-color: #ffffff;
 }
@@ -13285,6 +13286,7 @@ a.mdc-list-item {
   --drawer-bg: #212121;
   --btn-color: #ffffff;
   --color: #ffffff;
+  --color2: #cccccc;
   --light-color: #ffffff;
   --dark-color: #000000;
 }
@@ -13392,16 +13394,7 @@ body .mdc-drawer .mdc-list a:nth-last-child(1) {
 body .mdc-drawer-app-content {
   transition: all 0.2s ease-in-out;
   background: var(--mdc-theme-background);
-  overflow: hidden;
-  color: #757575;
   min-width: 0px !important;
-}
-body .mdc-drawer-app-content .main-content .intro {
-  padding-top: 22.78px;
-  margin: 0 20px;
-}
-body .mdc-drawer-app-content .main-content .intro .mdc-typography--headline4 {
-  margin-block-start: 0 !important;
 }
 body .mdc-drawer-app-content .main-content .mdc-menu,
 body .mdc-drawer-app-content .main-content .mdc-list,
