--- a/app/css/settings.css
+++ b/app/css/settings.css
@@ -1,3 +1,11 @@
+.intro {
+  padding-top: 22.78px;
+  margin: 0 20px;
+}
+.intro .mdc-typography--headline4 {
+  margin-block-start: 0 !important;
+}
+
 .settings {
   display: flex;
   flex-direction: column;
