--- a/app/scss/card-grid.scss
+++ b/app/scss/card-grid.scss
@@ -56,6 +56,12 @@
     max-width: 375px;
     overflow: hidden;
 
+    border: 3px solid transparent;
+
+    &:focus-within {
+        border-color: var(--mdc-theme-secondary);
+    }
+
     .mdc-card__primary-action {
         padding: 0 16px 8px 16px;
         min-height: 250px;
