--- a/app/scss/settings.scss
+++ b/app/scss/settings.scss
@@ -1,3 +1,10 @@
+.intro {
+    padding-top: 22.78px;
+    margin: 0 20px;
+    .mdc-typography--headline4 {
+        margin-block-start: 0 !important;
+    }
+}
 .settings {
     display: flex;
     flex-direction: column;
