--- a/app/css/library.css
+++ b/app/css/library.css
@@ -18,6 +18,8 @@
 .library .genres .genre-container .genre-cards {
   height: 100%;
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   overflow-x: scroll;
 }
