--- a/app/scss/home.scss
+++ b/app/scss/home.scss
@@ -15,9 +15,15 @@
     .cards {
         display: grid;
         height: fit-content;
+        grid-gap: 20px;
+        grid-auto-rows: 150px;
+        grid-template-columns: repeat(auto-fill, 300px);
 
         .mdc-card {
+            margin-top: 20px;
             background: var(--el2);
+            height: fit-content;
+            width: 300px;
         }
 
         .mdc-card__primary-action {
@@ -39,42 +45,17 @@
         }
     }
 
-    .cards {
-        grid-gap: 20px;
-        grid-auto-rows: 200px;
-        grid-template-columns: repeat(auto-fill, 300px);
-        .mdc-card {
-            margin-top: 20px;
-            background: var(--el2);
-            height: fit-content;
-            max-width: 600px;
-        }
-
-        .mdc-card__primary-action {
-            padding: 0 0 8px 16px;
-            color: var(--color);
-        }
-
-        .demo-card__title {
-            margin-top: 12px;
-            margin-bottom: 0px;
-        }
-
-        .demo-card__subtitle {
-            margin-top: 0px;
-        }
-    }
-
     .stats {
         width: 100%;
         height: fit-content;
+        padding: 20px 0;
+        margin: 20px 0;
 
         .cards {
             width: 100%;
             height: fit-content;
-
             grid-gap: 20px;
-            grid-auto-rows: 400px;
+            grid-auto-rows: 350px;
             grid-template-columns: repeat(auto-fill, 300px);
 
             .mdc-card {
