--- a/app/css/home.css
+++ b/app/css/home.css
@@ -1,29 +1,115 @@
-.cards {
-  background: grey;
-  display: grid;
-  grid-gap: 20px;
-  margin: 0 20px 20px 20px;
-  grid-auto-rows: 200px;
-  height: fit-content;
-  grid-template-columns: repeat(auto-fill, 300px);
-  background: var(--mdc-theme-background);
+.main-content {
+  overflow: auto;
+  padding: 0 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
-.cards .mdc-card {
+.main-content .intro {
+  color: var(--color);
+}
+.main-content .intro h1:nth-of-type(2) {
+  color: var(--color2);
+}
+.main-content .cards {
+  display: grid;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  grid-gap: 20px;
+  grid-auto-rows: 150px;
+  grid-template-columns: repeat(auto-fill, 300px);
+}
+.main-content .cards .mdc-card {
   margin-top: 20px;
   background: var(--el2);
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
   height: fit-content;
+  width: 300px;
 }
-.cards .mdc-card__primary-action {
+.main-content .cards .mdc-card__primary-action {
   padding: 0 0 8px 16px;
   color: var(--color);
 }
-.cards .demo-card__title {
+.main-content .cards .card__title {
   margin-top: 12px;
   margin-bottom: 0px;
 }
-.cards .demo-card__subtitle {
+.main-content .cards .card__subtitle {
   margin-top: 0px;
 }
-.cards .mdc-card {
-  max-width: 600px;
+.main-content .cards .mdc-card__actions {
+  margin-top: auto;
+}
+.main-content .stats {
+  width: 100%;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  padding: 20px 0;
+  margin: 20px 0;
+}
+.main-content .stats .cards {
+  width: 100%;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  grid-gap: 20px;
+  grid-auto-rows: 350px;
+  grid-template-columns: repeat(auto-fill, 300px);
+}
+.main-content .stats .cards .mdc-card {
+  width: 300px;
+  height: 350px;
+}
+.main-content .stats .cards .mdc-card .mdc-card__primary-action {
+  height: 100%;
+  padding: 0;
+}
+.main-content .stats .cards .mdc-card .mdc-card__primary-action .card__primary {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 100%;
+  width: 100%;
+}
+.main-content .stats .cards .mdc-card .mdc-card__primary-action .card__primary .stat {
+  height: 200px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.main-content .stats .cards .mdc-card .mdc-card__primary-action .card__primary .stat h2 {
+  font-size: 4em;
+  color: var(--mdc-theme-secondary);
+  padding: 0;
+  margin: 0;
+}
+.main-content .stats .cards .mdc-card .mdc-card__primary-action .card__primary .title {
+  text-align: center;
+}
+.main-content .stats .cards .mdc-card .mdc-card__primary-action .card__primary .title h2 {
+  font-size: 2.2em;
+  margin-bottom: 0.5em;
 }
