--- a/app/scss/card-grid.scss
+++ b/app/scss/card-grid.scss
@@ -42,9 +42,8 @@
 .cards {
     width: auto !important;
     height: 100% !important;
-    overflow-y: auto;
     margin: 0 auto;
-    background: var(--mdc-theme-background);
+    overflow-y: auto;
 }
 
 .mdc-card {
@@ -55,12 +54,16 @@
     min-width: 375px;
     max-width: 375px;
     overflow: hidden;
+    background-size: cover;
+    background-position: center;
+
+    &:focus-within {
+        box-shadow: 0 0 0 3px var(--mdc-theme-secondary);
+    }
 
     .mdc-card__primary-action {
         padding: 0 16px 8px 16px;
         min-height: 250px;
-        background-size: cover;
-        background-position: center;
 
         .game-card__primary {
             margin-top: auto;
@@ -146,7 +149,7 @@
     .bottom-row {
         display: grid;
         flex-direction: column;
-        margin: 32px;
+        margin: 32px 20px;
         max-width: 100%;
 
         .game-screenshots {
