--- a/app/scss/downloads.scss
+++ b/app/scss/downloads.scss
@@ -4,16 +4,18 @@
     display: none !important;
 }
 
+
 .downloads {
+    $sidebarlength: 500px;
     display: grid;
-    grid-template-columns: 600px auto;
+    grid-template-columns: 500px auto;
 
     .downloads-list {
         //MDC Divider
         border-right: 1px solid;
         border-color: var(--divider-color);
-        width: 600px;
-        min-width: 600px;
+        width: $sidebarlength;
+        min-width: $sidebarlength;
         height: calc(100vh - 64px);
         display: flex;
         flex-direction: column;
@@ -72,6 +74,12 @@
         .download-item-info {
             display: none;
         }
+
+        #selected-game-cover {
+            background-size: cover;
+            background-position: center;
+        }
+
         height: calc(100vh - 64px);
         overflow-y: auto;
     }
@@ -92,6 +100,14 @@
 
                 .title-desc-container {
                     margin-left: 26px;
+                }
+            }
+
+            .bottom-row {
+                .details {
+                    display: grid !important;
+                    grid-template-columns: repeat(3, 1fr);
+                    gap: 10px;
                 }
             }
         }
