--- a/app/scss/home.scss
+++ b/app/scss/home.scss
@@ -1,34 +1,102 @@
-.cards {
-    background: grey;
-    display: grid;
-    grid-gap: 20px;
-    margin: 0 20px 20px 20px;
-    grid-auto-rows: 200px;
-    height: fit-content;
-    grid-template-columns: repeat(auto-fill, 300px);
-    background: var(--mdc-theme-background);
+.main-content {
+    overflow: auto;
+    padding: 0 20px;
+    display: flex;
+    flex-direction: column;
 
-    .mdc-card {
-        margin-top: 20px;
-        background: var(--el2);
-        height: fit-content;
-    }
-
-    .mdc-card__primary-action {
-        padding: 0 0 8px 16px;
+    .intro {
         color: var(--color);
+
+        h1:nth-of-type(2) {
+            color: var(--color2);
+        }
     }
 
-    .demo-card__title {
-        margin-top: 12px;
-        margin-bottom: 0px;
+    .cards {
+        display: grid;
+        height: fit-content;
+        grid-gap: 20px;
+        grid-auto-rows: 150px;
+        grid-template-columns: repeat(auto-fill, 300px);
+
+        .mdc-card {
+            margin-top: 20px;
+            background: var(--el2);
+            height: fit-content;
+            width: 300px;
+        }
+
+        .mdc-card__primary-action {
+            padding: 0 0 8px 16px;
+            color: var(--color);
+        }
+
+        .card__title {
+            margin-top: 12px;
+            margin-bottom: 0px;
+        }
+
+        .card__subtitle {
+            margin-top: 0px;
+        }
+
+        .mdc-card__actions {
+            margin-top: auto;
+        }
     }
 
-    .demo-card__subtitle {
-        margin-top: 0px;
-    }
+    .stats {
+        width: 100%;
+        height: fit-content;
+        padding: 20px 0;
+        margin: 20px 0;
 
-    .mdc-card {
-        max-width: 600px;
+        .cards {
+            width: 100%;
+            height: fit-content;
+            grid-gap: 20px;
+            grid-auto-rows: 350px;
+            grid-template-columns: repeat(auto-fill, 300px);
+
+            .mdc-card {
+                width: 300px;
+                height: 350px;
+
+                .mdc-card__primary-action {
+                    height: 100%;
+                    padding: 0;
+
+                    .card__primary {
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        justify-content: center;
+                        height: 100%;
+                        width: 100%;
+
+                        .stat {
+                            height: 200px;
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            h2 {
+                                font-size: 4em;
+                                color: var(--mdc-theme-secondary);
+                                padding: 0;
+                                margin: 0;
+                            }
+                        }
+
+                        .title {
+                            text-align: center;
+                            h2 {
+                                font-size: 2.2em;
+                                margin-bottom: 0.5em;
+                            }
+                        }
+                    }
+                }
+            }
+        }
     }
 }
